RESOLVED FIXED139546
[Mac] Crash in -[WebVideoFullscreenHUDWindowController playing] in WK1 clients without FULLSCREEN_API enabled.
https://bugs.webkit.org/show_bug.cgi?id=139546
Summary [Mac] Crash in -[WebVideoFullscreenHUDWindowController playing] in WK1 client...
Jer Noble
Reported 2014-12-11 10:27:25 PST
[Mac] Crash in -[WebVideoFullscreenHUDWindowController playing] in WK1 clients without FULLSCREEN_API enabled.
Attachments
Patch (8.28 KB, patch)
2014-12-11 10:44 PST, Jer Noble
no flags
Patch for landing (8.47 KB, patch)
2014-12-11 11:12 PST, Jer Noble
no flags
Jer Noble
Comment 1 2014-12-11 10:28:09 PST
Jer Noble
Comment 2 2014-12-11 10:44:23 PST
WebKit Commit Bot
Comment 3 2014-12-11 10:46:24 PST
Attachment 243132 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mac/WebVideoFullscreenHUDWindowController.mm:409: The parameter name "videoElement" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 4 2014-12-11 11:04:49 PST
Comment on attachment 243132 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=243132&action=review > Source/WebCore/ChangeLog:8 > + Finish the work began by r173230 and rename mediaElement -> videoElement in WebVideoFullscreenHUDWindowController. Nit: "began"?
Jer Noble
Comment 5 2014-12-11 11:12:15 PST
Created attachment 243134 [details] Patch for landing
WebKit Commit Bot
Comment 6 2014-12-11 11:18:12 PST
Attachment 243134 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mac/WebVideoFullscreenHUDWindowController.mm:409: The parameter name "videoElement" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 7 2014-12-11 13:57:24 PST
Comment on attachment 243134 [details] Patch for landing Clearing flags on attachment: 243134 Committed r177179: <http://trac.webkit.org/changeset/177179>
Frédéric Wang Nélar
Comment 8 2018-05-23 07:51:57 PDT
Closing this bug since a patch landed for it.
Note You need to log in before you can comment on or make changes to this bug.